[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/CaptureArea/CaptureArea.gd" type="Script" id=1]
[ext_resource path="res://Resources/capture.wav" type="AudioStream" id=2]
[ext_resource path="res://Resources/explosion.wav" type="AudioStream" id=3]

[node name="CaptureArea" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 1, 1, 1, 0.517647 )

[node name="CaptureSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="ExplosionSE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_CaptureArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CaptureArea_body_exited"]
